--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,23 @@
 asgiref==3.8.1
+Brotli==1.1.0
+click==8.1.7
+contourpy==1.2.1
+cycler==0.12.1
+dj-database-url==2.3.0
 Django==5.1.2
+fonttools==4.53.1
+gunicorn==23.0.0
+h11==0.14.0
+kiwisolver==1.4.5
+matplotlib==3.9.1
+numpy==2.0.0
+packaging==24.1
 pillow==10.4.0
+psycopg2-binary==2.9.10
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
+six==1.16.0
 sqlparse==0.5.1
+typing_extensions==4.12.2
+uvicorn==0.32.1
+whitenoise==6.8.2
